# brain-dump-bot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
bot/: categorize.py  handlers.py  main.py  scheduler.py  summary.py  todoist.py  transcribe.py
bot/llm/: __init__.py  base.py  gemini.py  openai.py  prompt.py
db/: __init__.py  models.py
docs/plans/: 2026-03-06-brain-dump-bot-design.md  2026-03-06-brain-dump-bot-implementation.md  2026-03-07-multi-llm-provider-design.md
tests/: test_categorize.py  test_db.py  test_handlers.py  test_llm.py  test_scheduler.py  test_summary.py  test_todoist.py  test_transcribe.py
